fix gap skill items

--- a/css/output.css
+++ b/css/output.css
@@ -584,18 +584,6 @@ video {
   top: 0px;
 }
 
-.-top-28 {
-  top: -7rem;
-}
-
-.-top-32 {
-  top: -8rem;
-}
-
-.-top-10 {
-  top: -2.5rem;
-}
-
 .z-0 {
   z-index: 0;
 }
@@ -808,6 +796,14 @@ video {
 
 .gap-8 {
   gap: 2rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
 }
 
 .overflow-hidden {
@@ -1051,6 +1047,34 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+@media (max-width: 425px) {
+  .max-\[425px\]\:h-fit {
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+
+  .max-\[425px\]\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
+  .max-\[425px\]\:w-full {
+    width: 100%;
+  }
+
+  .max-\[425px\]\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+@media (max-width: 390px) {
+  .max-\[390px\]\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
 @media (min-width: 390px) {
   .min-\[390px\]\:w-\[325px\] {
     width: 325px;
@@ -1092,6 +1116,14 @@ video {
 
   .sm\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .sm\:gap-5 {
+    gap: 1.25rem;
+  }
+
+  .sm\:gap-4 {
+    gap: 1rem;
   }
 }
 
